tests/lean/inaccessible.lean.expected.out
inaccessible.lean:14:10: error: function expected at
  mk
inaccessible.lean:14:4: error: invalid use of inaccessible term, it is not fixed by other arguments
inaccessible.lean:17:12: error: invalid inaccessible annotation, it cannot be used around functions in applications
inaccessible.lean:17:4: error: invalid use of inaccessible term, it is not fixed by other arguments
inaccessible.lean:25:12: error: invalid pattern, 'a' already appeared in this pattern
inaccessible.lean:25:3: error: function expected at
  f
inaccessible.lean:25:16: error: ill-formed match/equations expression
inaccessible.lean:28:3: error: function expected at
  f
inaccessible.lean:28:16: error: ill-formed match/equations expression
inaccessible.lean:31:4: error: invalid pattern, 'a' already appeared in this pattern
inaccessible.lean:82:2: error: invalid use of inaccessible term, it is not completely fixed by other arguments
  .?m_1 + 1
